Bug 65280 - 30bpp displays not working on DP
Summary: 30bpp displays not working on DP
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-03 03:46 UTC by shui yangwei
Modified: 2017-10-06 14:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description shui yangwei 2013-06-03 03:46:17 UTC
Environment:
---------------------
Kernel: (drm-intel-nightly)c5ea23067eb3f0bc86dea95b8f544c7ef8dfea54
Some additional commit info:
Merge: d4ece7c a3f6902
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Thu May 30 09:53:28 2013 +0200

Description:
---------------------
We tried 30bpp testing on DP, but find our settings are not really worked. We dumped the dmesg of "reboot machine and start X", then will find:
[  186.441085] [drm:intel_modeset_pipe_config], plane bpp: 30, pipe bpp: 24, dithering: 1

So it's not really been set to 30bpp.

Reproduce steps:
---------------------
1. modify /etc/X11/xorg.conf : DefaultDepth 30
2. reboot machine
3. xinit &
4. dmesg | grep -i "plane"
Comment 1 Chris Wilson 2013-06-03 07:43:41 UTC
Daniel sent a patch for the artificial limiting of the pipe bpp...
Comment 2 Daniel Vetter 2013-06-04 11:54:11 UTC
First two patches are now merged to dinq, can you please apply

https://patchwork.kernel.org/patch/2648411/

and test whether that enables 30bpp on DP?
Comment 3 shui yangwei 2013-06-07 02:35:49 UTC
(In reply to comment #2)
> First two patches are now merged to dinq, can you please apply
> 
> https://patchwork.kernel.org/patch/2648411/
> 
> and test whether that enables 30bpp on DP?

After applying the patch on latest -next-queued kernel, I find our DP port 30 bpp worked, very glad to tell you this, this patch really worked.

[   74.357009] [drm:intel_modeset_pipe_config], plane bpp: 30, pipe bpp: 30, dithering: 0
Comment 4 Daniel Vetter 2013-06-07 08:34:53 UTC
Patch merged to dinq, thanks for testing:

commit 3e7ca9858d51a8df2bb18b82a529df5e5f9abc51
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Sat Jun 1 19:45:56 2013 +0200

    drm/i915: enable 30bpp for DP outputs
Comment 5 shui yangwei 2013-06-27 01:53:11 UTC
verified here.
Comment 6 Elizabeth 2017-10-06 14:46:16 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.